# Erebus

./: .gitignore  .travis.yml  Makefile  README.md
broker/: Makefile  broker.go  broker_test.go  client_controller_server.go  control_server.go  go.mod  go.sum  main.go  wb_controller_server.go
broker-control-cli/: Makefile  go.mod  go.sum  main.go
broker-control-cli/cmd/: connect.go  disconnect.go  list.go  root.go  sim-get.go  sim-set.go  sim-subscribe.go  sim.go  util.go
client/: .coveragerc  Makefile  pyproject.toml
client/python/: Makefile  README.rst  pyproject.toml
client/python/erebus/client/: __init__.py  behavior.py  client.py  commands.py  sensors.py
client/python/examples/: basic.py
client/python/test/: test_commands.py
client/test/: test_sensors.py
game/controllers/: erebus-robot-controller  erebus-supervisor-controller
game/controllers/MainSupervisor/: MainSupervisor.py
game/controllers/ObjectPlacementSupervisor/: ObjectPlacementSupervisor.py
game/controllers/robot0Controller/: abstractionLayer.py
game/worlds/: GeneratedWorld.wbt
shared/proto/: client_controller.proto  control.proto  session.proto  sim.proto  types.proto  wb_controller.proto
wb-controller/: Makefile
wb-controllers/erebus-robot-controller/: Makefile  erebus-robot-controller.py
wb-controllers/erebus-supervisor-controller/: Makefile  erebus-supervisor-controller.py
world_gen/: robotTemplate.txt  supervisorTemplate.txt
