[tool.poetry]
name = "erebus-client"
version = "0.1.0"
description = ""
authors = ["Ethan Wu <ethanwu10@gmail.com>"]
include = ["*_pb2*.py"]

[tool.poetry.dependencies]
python = "^3.5"
grpcio = "^1.27.1"
protobuf = "^3.11.3"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.27.1"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
