[tool.poetry]
name = "erebus-client"
version = "0.1.0"
description = "Client library for Erebus simulation environment"
authors = ["Ethan Wu <ethanwu10@gmail.com>"]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Education",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Natural Language :: English",
]
packages = [
	{ include = "erebus" },
]
include = ["**/*_pb2*.py"]

[tool.poetry.dependencies]
python = "^3.6"
grpcio = "^1.27.1"
protobuf = "^3.11.3"
dataclasses = { version = "^0.7", python = "~3.6" }

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.27.1"
pytest = "^5.3.5"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
